--- a/css/style.css
+++ b/css/style.css
@@ -294,7 +294,7 @@ body {
 }
 
 .hero .content h1 {
-  font-size: 5em;
+  font-size: 5rem;
   color: #fff;
   text-shadow: solid #eee paddsolid #eee padd3px rgba(1, 1, 3, 0.5);
   line-height: 1.2;
@@ -356,7 +356,7 @@ body {
   flex: 1 1 45rem;
 }
 
-.about .row .about-img img { 
+.about .row .about-img img {
   width: 100%;
   -webkit-mask-image: url("../img/Menu/splash.svg");
   -webkit-mask-size: 50%;
